[tool.poetry]
name = "dydx-v4-client"
version = "0.1.0"
description = ""
authors = ["Piotr Piwoński <piwonskp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
