[tool.poetry]
name = "dydx-v4-client"
version = "1.0.0"
description = ""
authors = ["Piotr Piwoński <piwonskp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
v4-proto = "^4.0.1"
httpx = "^0.27.0"
websocket-client = "^1.7.0"
bip-utils = "^2.9.3"
ecdsa = "^0.19.0"
typing-extensions = "^4.12.2"
bech32 = "^1.2.0"
pycryptodome = "^3.20.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
python-dotenv = "^1.0.1"
twine = "^4.0.2"
black = "^24.4.0"

[tool.poetry.group.examples.dependencies]
nest-asyncio = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"