[workspace]
resolver = "2"
members = [
    "client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "LicenseRef-dYdX-Custom"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
bigdecimal = { version = "0.4", features = ["serde"] }
derive_more = { version = "1", features = ["full"] }
log = "0.4"
thiserror = "1"
tokio = { version = "1.39", features = ["full"] }
dydx-proto = "0.1.0"
