[workspace]
resolver = "2"
members = [
    "client",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "LicenseRef-dYdX-Custom"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
bigdecimal = { version = "0.4", features = ["serde"] }
derive_more = { version = "1", features = ["full"] }
log = "0.4"
thiserror = "2"
tokio = { version = "1.41", features = ["fs", "rt-multi-thread"] }
dydx-proto = "0.2.0"
