[package]
name = "dydx-v4-rust"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "dYdX v4 asynchronous client."
homepage = "https://github.com/dydxprotocol/v4-clients/v4-client-rs"
repository = "https://github.com/dydxprotocol/v4-clients/v4-clients-rs"
readme = "README.md"

# https://crates.io/categories
categories = ["api-bindings", "asynchronous", "finance"]
keywords = ["trading", "dex"]

[features]
default = ["faucet", "noble", "telemetry"]
faucet = []
noble = [
    "dep:ibc-proto"
]
telemetry = [
  "dep:metrics",
]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bigdecimal.workspace = true
bip32 = { version = "0.5", default-features = false, features = ["bip39", "alloc", "secp256k1"] }
cosmrs = "0.16"
chrono = { version = "0.4", features = ["serde"] }
derive_more.workspace = true
futures-util = "0.3"
governor = "0.6"
ibc-proto = { version = "0.46", optional = true }
log.workspace = true
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.9"
strum = { version = "0.26", features = ["derive"] }
thiserror.workspace = true
tonic = { version = "0.11", features = ["tls", "tls-roots", "transport", "channel"] }
tokio.workspace = true
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
toml = "0.8"
tower = "0.4"
v4-proto-rs.workspace = true

# Telemetry
metrics = { version = "0.23", optional = true }

[dev-dependencies]
metrics-exporter-tcp = "0.10.0"
serial_test = "3.1.1"
tracing = "0.1"
tracing-subscriber = "0.3"
